[gd_scene load_steps=18 format=3 uid="uid://q4upubrbqsq"]

[ext_resource type="Script" path="res://Board/Cell/Cell.gd" id="1_iaja1"]
[ext_resource type="Texture2D" uid="uid://cho6tgadoqphe" path="res://Assets/skins/default/empty.png" id="2_j6o8q"]
[ext_resource type="FontFile" uid="uid://7ynms6dclfsi" path="res://Assets/fonts/04B_03__.TTF" id="3_s2rbs"]
[ext_resource type="Shader" path="res://Board/Cell/CellObject.gdshader" id="5_k5bpx"]
[ext_resource type="Script" path="res://Scenes/QuestSelect/TooltipGrabber.gd" id="7_8udf5"]
[ext_resource type="Script" path="res://Board/Cell/CellParticle.gd" id="7_47sm6"]
[ext_resource type="Script" path="res://Board/Cell/FlagTexture.gd" id="8_e73ca"]
[ext_resource type="Texture2D" uid="uid://vr40qjxna1js" path="res://Assets/skins/default/flag.png" id="9_13f35"]
[ext_resource type="Script" path="res://Board/Cell/CellBackground.gd" id="9_jq55f"]
[ext_resource type="Script" path="res://Board/Cell/CellValueLabel.gd" id="10_71xkf"]
[ext_resource type="Script" path="res://Board/Cell/CellObjectTexture.gd" id="13_g3kp0"]

[sub_resource type="LabelSettings" id="LabelSettings_e266q"]
resource_local_to_scene = true
font = ExtResource("3_s2rbs")
font_size = 8
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2krhp"]
resource_local_to_scene = true
shader = ExtResource("5_k5bpx")
shader_parameter/palette_enabled = false

[sub_resource type="LabelSettings" id="LabelSettings_qxy3w"]
font_size = 8
font_color = Color(0.972549, 0.898039, 0.533333, 1)
outline_size = 3
outline_color = Color(0.498039, 0.188235, 0.00392157, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_56qv3"]
viewport_path = NodePath("ParticleViewport")

[sub_resource type="Curve" id="Curve_acn7l"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_oigwf"]
offsets = PackedFloat32Array(0.5, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Cell" type="MarginContainer" node_paths=PackedStringArray("_background", "_value_label", "_object_texture", "_flag_texture", "_text_particles")]
script = ExtResource("1_iaja1")
cell_value = 1
_background = NodePath("Background")
_value_label = NodePath("MarginContainer/ValueLabel")
_object_texture = NodePath("MarginContainer2/ObjectTexture")
_flag_texture = NodePath("Node2D/FlagTexture")
_text_particles = NodePath("TextParticles")
metadata/revealed = true
metadata/flagged = false

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_j6o8q")
script = ExtResource("9_jq55f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 2

[node name="ValueLabel" type="Label" parent="MarginContainer" node_paths=PackedStringArray("object_textue")]
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_e266q")
horizontal_alignment = 1
script = ExtResource("10_71xkf")
cell_value = 1
object_textue = NodePath("../../MarginContainer2/ObjectTexture")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ObjectTexture" type="TextureRect" parent="MarginContainer2" node_paths=PackedStringArray("background")]
z_index = 5
material = SubResource("ShaderMaterial_2krhp")
layout_mode = 2
expand_mode = 1
stretch_mode = 3
script = ExtResource("13_g3kp0")
background = NodePath("../../Background")

[node name="TooltipGrabber" type="Node" parent="MarginContainer2/ObjectTexture"]
script = ExtResource("7_8udf5")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(8, 8)

[node name="FlagTexture" type="TextureRect" parent="Node2D"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("9_13f35")
script = ExtResource("8_e73ca")

[node name="ParticleViewport" type="SubViewport" parent="."]
transparent_bg = true
canvas_item_default_texture_filter = 0
gui_disable_input = true
size = Vector2i(10, 8)

[node name="ParticleLabel" type="Label" parent="ParticleViewport"]
offset_left = 1.0
text = "+2"
label_settings = SubResource("LabelSettings_qxy3w")

[node name="TextParticles" type="CPUParticles2D" parent="." node_paths=PackedStringArray("particle_viewport", "particle_label")]
position = Vector2(8, 8)
emitting = false
amount = 1
lifetime = 0.7
one_shot = true
local_coords = true
texture = SubResource("ViewportTexture_56qv3")
direction = Vector2(0, -1)
spread = 15.0
gravity = Vector2(0, 300)
initial_velocity_min = 75.0
initial_velocity_max = 75.0
scale_amount_curve = SubResource("Curve_acn7l")
color_ramp = SubResource("Gradient_oigwf")
script = ExtResource("7_47sm6")
text = "+2"
text_color_preset = 1
particle_viewport = NodePath("../ParticleViewport")
particle_label = NodePath("../ParticleViewport/ParticleLabel")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
